Description and placeholder values for inputs.

--- a/src/resources/client/index.html
+++ b/src/resources/client/index.html
@@ -78,23 +78,26 @@
             </div>
             <div class="field-group">
                 <label for="maxPlayers">Max players</label>
-                <input id="maxPlayers" name="maxPlayers" type="number" step="1">
+                <input id="maxPlayers" name="maxPlayers" type="number" step="1" />
             </div>
             <div class="field-group">
                 <label for="onLoadName">OnLoadName</label>
-                <input id="onLoadName" name="onLoadName" type="text">
+                <input id="onLoadName" name="onLoadName" type="text" placeholder="Oh it's this mission" />
             </div>
-            <div class="field-group">
-                <label for="author">Author</label>
-                <input id="author" name="author" type="text">
-            </div>
+            <div class="description">Full mission name, shown on load screen</div>
             <div class="field-group">
                 <label for="briefingName">Briefing name</label>
-                <input id="briefingName" name="briefingName" type="text">
+                <input id="briefingName" name="briefingName" type="text" placeholder="oh_its_this_mission" />
             </div>
+            <div class="description">Short mission name containing only alphanumeric and underscore</div>
             <div class="field-group">
                 <label for="overviewText">Overview text</label>
-                <input id="overviewText" name="overviewText" type="text">
+                <input id="overviewText" name="overviewText" type="text" placeholder="Slot everything!" />
+            </div>
+            <div class="description">Short description/pun of mission and slotting requirements</div>
+            <div class="field-group">
+                <label for="author">Author</label>
+                <input id="author" name="author" type="text" />
             </div>
             
             <h3 class="before after">Factions</h3>
