Mission generating done.

--- a/src/resources/client/index.html
+++ b/src/resources/client/index.html
@@ -77,10 +77,6 @@
                 </select>
             </div>
             <div class="field-group">
-                <label for="maxPlayers">Max players</label>
-                <input id="maxPlayers" name="maxPlayers" type="number" step="1" />
-            </div>
-            <div class="field-group">
                 <label for="onLoadName">OnLoadName</label>
                 <input id="onLoadName" name="onLoadName" type="text" placeholder="Oh it's this mission" />
             </div>
@@ -115,6 +111,7 @@
             </div>
 
             <button id="generate-mission">Generate mission</button>
+            <form id="download-mission" method="GET" action="" style="display: none;"></form>
         </div>
     </div>
 </div>
