Removed Plank from UI for now and added Admiral support.

--- a/src/resources/client/index.html
+++ b/src/resources/client/index.html
@@ -105,7 +105,7 @@
                 <label for="admiral">Admiral</label>
                 <input id="admiral" name="admiral" type="checkbox">
             </div>
-            <div class="field-group">
+            <div class="field-group" style="display: none;">
                 <label for="plank">Plank</label>
                 <input id="plank" name="plank" type="checkbox">
             </div>
