Indicator that the server is working.

--- a/src/resources/client/index.html
+++ b/src/resources/client/index.html
@@ -124,7 +124,10 @@
                 <input id="plank" name="plank" type="checkbox">
             </div>
 
-            <button id="generate-mission">Generate mission</button>
+            <div>
+                <button id="generate-mission">Generate mission</button>
+                <img id="download-progress" src="progress.gif" width="24" height="24" style="display: none; margin-bottom: -5px;" />
+            <div>
             <form id="download-mission" method="GET" action="" style="display: none;"></form>
         </div>
     </div>
