--- a/src/resources/client/index.html
+++ b/src/resources/client/index.html
@@ -72,7 +72,11 @@
 <body>
 <div>
     <div class="header">
-        <span class="header-text">Shipyard</span>
+        <div class="header-text">Shipyard</div>
+        <ul class="menu">
+            <li class="menu-item active"><a href="/shipyard">Mission</a></li>
+            <li class="menu-item"><a href="/shipyard/town-sweep">Town Sweep</a></li>
+        </ul>
     </div>
     <div class="content">
         <div class="form">
@@ -127,7 +131,7 @@
             <div>
                 <button id="generate-mission">Generate mission</button>
                 <img id="download-progress" src="progress.gif" width="24" height="24" style="display: none; margin-bottom: -5px;" />
-            <div>
+            </div>
             <form id="download-mission" method="GET" action="" style="display: none;"></form>
         </div>
     </div>
