Adding RE generation with a bunch of copy-paste and hacks. This really needs a rewrite now...

--- a/src/resources/client/random-engagements.html
+++ b/src/resources/client/random-engagements.html
@@ -5,7 +5,7 @@
 <head>
     <title>Shipyard</title>
     <link href="styles.css" rel="stylesheet">
-    <script type="text/javascript" src="town-sweep.js"></script>
+    <script type="text/javascript" src="random-engagements.js"></script>
 </head>
 
 <body>
@@ -14,13 +14,13 @@
         <div class="header-text">Shipyard</div>
         <ul class="menu">
             <li class="menu-item"><a href="/shipyard">Mission</a></li>
-            <li class="menu-item active"><a href="/shipyard/town-sweep">Town Sweep</a></li>
-            <li class="menu-item"><a href="/shipyard/random-engagements">Random Engagements</a></li>
+            <li class="menu-item"><a href="/shipyard/town-sweep">Town Sweep</a></li>
+            <li class="menu-item active"><a href="/shipyard/random-engagements">Random Engagements</a></li>
         </ul>
     </div>
     <div class="content">
         <div class="form">
-            <h3 class="after">Town Sweep</h3>
+            <h3 class="after">Random Engagements</h3>
             <div class="field-group">
                 <label for="terrain">Terrain</label>
                 <select id="terrain">
