--- a/src/resources/client/index.html
+++ b/src/resources/client/index.html
@@ -76,6 +76,7 @@
         <ul class="menu">
             <li class="menu-item active"><a href="/shipyard">Mission</a></li>
             <li class="menu-item"><a href="/shipyard/town-sweep">Town Sweep</a></li>
+            <li class="menu-item"><a href="/shipyard/random-engagements">Random Engagements</a></li>
         </ul>
     </div>
     <div class="content">
