Adding support for Navy.

--- a/src/resources/client/index.html
+++ b/src/resources/client/index.html
@@ -121,7 +121,12 @@
                 <label for="admiralIsEnabled">Admiral</label>
                 <input id="admiralIsEnabled" name="admiralIsEnabled" type="checkbox">
             </div>
-            <div id="admiral" style="display: none">
+            <div id="admiral" class="addon-config" style="display: none">
+            </div>
+
+            <div class="field-group">
+                <label for="navy">Navy</label>
+                <input id="navy" name="navy" type="checkbox">
             </div>
 
             <div class="field-group" style="display: none;">
