Further introduction of webpack.

--- a/src/client/resources/random-engagements.html
+++ b/src/client/resources/random-engagements.html
@@ -5,7 +5,7 @@
 <head>
     <title>Shipyard</title>
     <link href="styles.css" rel="stylesheet">
-    <script type="text/javascript" src="random-engagements.js"></script>
+    <script type="text/javascript" src="js/re.js"></script>
 </head>
 
 <body>
