--- a/src/client/resources/town-sweep.html
+++ b/src/client/resources/town-sweep.html
@@ -5,7 +5,7 @@
 <head>
     <title>Shipyard</title>
     <link href="styles.css" rel="stylesheet">
-    <script type="text/javascript" src="town-sweep.js"></script>
+    <script type="text/javascript" src="js/ts.js"></script>
 </head>
 
 <body>
