--- a/src/client/resources/index.html
+++ b/src/client/resources/index.html
@@ -5,7 +5,7 @@
 <head>
     <title>Shipyard</title>
     <link href="styles.css" rel="stylesheet">
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="js/mission.js"></script>
     
     <script id="faction-select-field-template" type="text/template">
         <div class="field-group">
